# Ai-research-assistant

./: .gitignore  README.md  answer.py  ingest.py  main.py  metrics.py  pyproject.toml  test_api.py  test_classifier.py  ui.py
data/: metrics.json
